--- a/Deemixrr/Views/Shared/_Layout.cshtml
+++ b/Deemixrr/Views/Shared/_Layout.cshtml
@@ -129,6 +129,11 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link pl-3" asp-controller="Playlist" asp-action="Update">
+                            <span class="ml-1 item-text">Force Update</span>
+                        </a>
+                    </li>
 
                     <li class="nav-item dropdown">
                         <a href="#folder" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link">
